remove t/signature.t - use dzil generated author test instead

--- a/dist.ini
+++ b/dist.ini
@@ -4,10 +4,5 @@ license = Perl_5
 copyright_holder = Michael Schout
 
 [@MSCHOUT]
-[Prereqs]
-;; Prereq -> Prereqs
-Dist::Zilla = 4.101800
-
-[Twitter]
-hash_tags = #perl
-tweet_url = http://github.com/mschout/pod-weaver-section-sourcegithub/commits/v{{$VERSION}}
+use_travis = 1
+use_twitter = 1
