--- a/dist.ini
+++ b/dist.ini
@@ -4,3 +4,8 @@ license = Perl_5
 copyright_holder = Michael Schout
 
 [@MSCHOUT]
+
+[ReadmeAnyFromPod / MarkdownInRoot]
+type = markdown
+filename = README.md
+location = root
