--- a/META.yml
+++ b/META.yml
@@ -11,20 +11,26 @@ configure_requires:
   ExtUtils::MakeMaker: '0'
   perl: '5.004'
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 6.009, CPAN::Meta::Converter version 2.150005'
+generated_by: 'Dist::Zilla version 6.030, CPAN::Meta::Converter version 2.150010'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: '1.4'
 name: Pod-Weaver-Section-SourceGitHub
+provides:
+  Pod::Weaver::Section::SourceGitHub:
+    file: lib/Pod/Weaver/Section/SourceGitHub.pm
+    version: '0.57'
 requires:
   Moose: '0'
   Moose::Autobox: '0'
   Pod::Weaver::Role::Section: '0'
   perl: '5.006'
 resources:
-  bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=Pod-Weaver-Section-SourceGitHub
-  homepage: http://search.cpan.org/dist/Pod-Weaver-Section-SourceGitHub/
-  repository: git://github.com/mschout/pod-weaver-section-sourcegithub.git
-version: '0.56'
-x_serialization_backend: 'YAML::Tiny version 1.69'
+  bugtracker: https://github.com/mschout/pod-weaver-section-sourcegithub/issues
+  homepage: https://github.com/mschout/pod-weaver-section-sourcegithub
+  repository: https://github.com/mschout/pod-weaver-section-sourcegithub.git
+version: '0.57'
+x_generated_by_perl: v5.36.0
+x_serialization_backend: 'YAML::Tiny version 1.74'
+x_spdx_expression: 'Artistic-1.0-Perl OR GPL-1.0-or-later'
